--- a/ehl-test/index.html
+++ b/ehl-test/index.html
@@ -71,6 +71,7 @@
 								<div class="offer__desc flex">
 									<img src="img/clock.svg" alt="">
 									<p>После 5 дней</p>
+									<img src="img/more.png" alt="" class="offer__more">
 								</div>
 								<div class="offer__per flex">
 									<span>220<small>%</small></span>
@@ -94,6 +95,7 @@
 								<div class="offer__desc flex">
 									<img src="img/clock.svg" alt="">
 									<p>После 5 дней</p>
+									<img src="img/more2.svg" alt="" class="offer__more2">
 								</div>
 								<div class="offer__per flex">
 									<span>220<small>%</small></span>
