--- a/ehl-test/about.html
+++ b/ehl-test/about.html
@@ -25,7 +25,7 @@
 						<p>Основная информация о нас</p>
 						<h2>Компания <span>Elect Holdings Limited</span></h2>
 					</div>
-					<div class="aboutpage__box">
+					<div class="aboutpage__box wow slideInLeft">
 						<p class="aboutpage__text">The company Elect Holdings Limited was registered in the UK in 2008 and is an investment company whose activities are aimed at making a profit by making trade deals mainly in the commodity market, cryptocurrency, as well as cfd contracts. The company is represented on the world's largest trading floors: the Chicago Mercantile Exchange, the New York Mercantile Exchange, the International Petroleum Exchange, the London Metal Exchange.</p>
 						<div class="title">
 							<h2>As <span>we earn?</span></h2>
@@ -75,7 +75,7 @@
 					<div class="offercl__image">
 						<img src="img/xplus.png" alt="">
 					</div>
-					<div class="offercl__info">
+					<div class="offercl__info wow slideInRight">
 						<div class="title">
 							<h2><span>What we offer</span> to the clients</h2>
 						</div>
@@ -85,7 +85,7 @@
 				</div>
 				<div class="team">
 					<img src="img/team.jpg" alt="" class="team__bg">
-					<div class="team__box team__box_1">
+					<div class="team__box team__box_1 wow slideInLeft">
 						<div class="title">
 							<h2>Team of<span> professionals</span></h2>
 						</div>
@@ -98,7 +98,7 @@
 						</ul>
 						<p class="team__text">Elect Holdings Limited has successfully resolved these issues. Investors with small and medium-sized investments are given a unique opportunity to consolidate their funds to obtain profit by transferring them to trust management of professional traders.</p>
 					</div>
-					<div class="team__box team__box_2">
+					<div class="team__box team__box_2 wow slideInLeft">
 						<div class="title">
 							<h2><span>Goal and tasks</span> investment company:</h2>
 						</div>
@@ -126,14 +126,14 @@
 					</div>
 					<div class="adva__items">
 						<img src="img/adva_bg.png" alt="" class="adva__bg">
-						<div class="adva__item adva__item_1 flex">
+						<div class="adva__item adva__item_1 flex wow fadeIn" data-wow-delay="300ms">
 							<span class="adva__number">01</span>
 							<div class="adva__img flex">
 								<img src="img/adva1.svg" alt="">
 							</div>
 							<p class="adva__title">insurance <br>Contributions</p>
 						</div>
-						<div class="adva__item adva__item_2 flex">
+						<div class="adva__item adva__item_2 flex wow fadeIn" data-wow-delay="600ms">
 							<span class="adva__number">02</span>
 							<div class="adva__img flex">
 								<img src="img/adva2.svg" alt="">
@@ -142,21 +142,21 @@
 							and registration<br>
 							documents</p>
 						</div>
-						<div class="adva__item adva__item_3 flex">
+						<div class="adva__item adva__item_3 flex wow fadeIn" data-wow-delay="900ms">
 							<span class="adva__number">03</span>
 							<div class="adva__img flex">
 								<img src="img/adva3.svg" alt="">
 							</div>
 							<p class="adva__title">low starting level <br> of investment</p>
 						</div>
-						<div class="adva__item adva__item_4 flex">
+						<div class="adva__item adva__item_4 flex wow fadeIn" data-wow-delay="1200ms">
 							<span class="adva__number">04</span>
 							<div class="adva__img flex">
 								<img src="img/adva4.svg" alt="">
 							</div>
 							<p class="adva__title">stable and timely <br> income accrual</p>
 						</div>
-						<div class="adva__item adva__item_5 flex">
+						<div class="adva__item adva__item_5 flex wow fadeIn" data-wow-delay="1500ms">
 							<span class="adva__number">05</span>
 							<div class="adva__img flex">
 								<img src="img/adva5.svg" alt="">
@@ -165,14 +165,14 @@
 							of the affiliate<br>
 							program</p>
 						</div>
-						<div class="adva__item adva__item_6 flex">
+						<div class="adva__item adva__item_6 flex wow fadeIn" data-wow-delay="1800ms">
 							<span class="adva__number">06</span>
 							<div class="adva__img flex">
 								<img src="img/adva6.svg" alt="">
 							</div>
 							<p class="adva__title">intuitive <br> interface</p>
 						</div>
-						<div class="adva__item adva__item_7 flex">
+						<div class="adva__item adva__item_7 flex wow fadeIn" data-wow-delay="2100ms">
 							<span class="adva__number">07</span>
 							<div class="adva__img flex">
 								<img src="img/adva7.svg" alt="">
@@ -195,7 +195,7 @@
 						<span>or Registration</span>
 					</div>
 				</div>
-				<form action="" class="modal__form">
+				<form action="/example.php" class="modal__form">
 					<div class="modal__input flex">
 						<div class="modal__label">
 							<span>Login*</span>
@@ -216,7 +216,7 @@
 					</div>
 					<p class="modal__placeholder">* обязательные поля</p>
 					<div class="modal__check">
-						<input id="remember" type="checkbox" type="text" checked>
+						<input id="remember" type="checkbox" checked>
 						<label for="remember">Remember password</label>
 					</div>
 					<div class="modal__kapcha flex">
@@ -247,7 +247,7 @@
 						<span>or Sign Up</span>
 					</div>
 				</div>
-				<form action="" class="modal__form">
+				<form action="/example.php" class="modal__form">
 					<div class="modal__rows">
 						<div class="modal__row flex">
 							<div class="modal__input flex">
@@ -323,7 +323,7 @@
 					</div>
 					<p class="modal__placeholder">* обязательные поля</p>
 					<div class="modal__check modal__check_2">
-						<input id="remember2" type="checkbox" type="text" checked>
+						<input id="remember2" type="checkbox" checked>
 						<label for="remember2">Галочка согласия с правами галочка согласия с правами галочка согласия с правами <a href="">лецензионное соглашение</a></label>
 					</div>
 					<div class="modal__kapcha flex">
@@ -464,6 +464,7 @@
 	-->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script>
 	<script type="text/javascript" src="js/components/slick.js" ></script>
+	<script type="text/javascript" src="js/components/wow.min.js" ></script>
 	<script type="text/javascript" src="js/custom.js" ></script>
 </body>
 </html>
