--- a/ehl-test/faq.html
+++ b/ehl-test/faq.html
@@ -125,7 +125,7 @@
 						<span>or Registration</span>
 					</div>
 				</div>
-				<form action="" class="modal__form">
+				<form action="/example.php" class="modal__form">
 					<div class="modal__input flex">
 						<div class="modal__label">
 							<span>Login*</span>
@@ -146,7 +146,7 @@
 					</div>
 					<p class="modal__placeholder">* обязательные поля</p>
 					<div class="modal__check">
-						<input id="remember" type="checkbox" type="text" checked>
+						<input id="remember" type="checkbox" checked>
 						<label for="remember">Remember password</label>
 					</div>
 					<div class="modal__kapcha flex">
@@ -177,7 +177,7 @@
 						<span>or Sign Up</span>
 					</div>
 				</div>
-				<form action="" class="modal__form">
+				<form action="/example.php" class="modal__form">
 					<div class="modal__rows">
 						<div class="modal__row flex">
 							<div class="modal__input flex">
@@ -253,7 +253,7 @@
 					</div>
 					<p class="modal__placeholder">* обязательные поля</p>
 					<div class="modal__check modal__check_2">
-						<input id="remember2" type="checkbox" type="text" checked>
+						<input id="remember2" type="checkbox" checked>
 						<label for="remember2">Галочка согласия с правами галочка согласия с правами галочка согласия с правами <a href="">лецензионное соглашение</a></label>
 					</div>
 					<div class="modal__kapcha flex">
