--- a/ehl-test/tarifs.html
+++ b/ehl-test/tarifs.html
@@ -132,7 +132,7 @@
 						<h2><span>Партнерская </span>программа</h2>
 					</div>
 					<div class="programm__box flex">
-						<div class="programm__left partprog__left">
+						<div class="programm__left partprog__left wow slideInLeft">
 							<div class="programm__rounds partprog__rounds flex">
 								<div class="programm__round partprog__round_1 flex">
 									<img class="programm__circle" src="img/circle2.png" alt="">
@@ -156,20 +156,20 @@
 						</div>
 						<div class="programm__right partprog__right">
 							<div class="partprog__items">
-								<div class="programm__item programm__item_1 flex">
+								<div class="programm__item programm__item_1 flex wow slideInRight" data-wow-delay="700ms">
 									<div class="programm__icon flex">
 										<img src="img/onlain.svg" alt="">
 									</div>
 									<p class="programm__text2">Онлайн бизнес, вам решать - <br> где, когда и сколько.</p>
 								</div>
-								<div class="programm__item programm__item_2 flex">
+								<div class="programm__item programm__item_2 flex wow slideInRight" data-wow-delay="1400ms">
 									<div class="programm__icon flex">
 										<img src="img/many.svg" alt="">
 									</div>
 									<p class="programm__text2">Высокий заработок <br>
 									без собственных вложений</p>
 								</div>
-								<div class="programm__item flex">
+								<div class="programm__item flex wow slideInRight" data-wow-delay="2100ms">
 									<div class="programm__icon flex">
 										<img src="img/stability.svg" alt="">
 									</div>
@@ -233,7 +233,7 @@
 						<span>or Registration</span>
 					</div>
 				</div>
-				<form action="" class="modal__form">
+				<form action="/example.php" class="modal__form">
 					<div class="modal__input flex">
 						<div class="modal__label">
 							<span>Login*</span>
@@ -254,7 +254,7 @@
 					</div>
 					<p class="modal__placeholder">* обязательные поля</p>
 					<div class="modal__check">
-						<input id="remember" type="checkbox" type="text" checked>
+						<input id="remember" type="checkbox" checked>
 						<label for="remember">Remember password</label>
 					</div>
 					<div class="modal__kapcha flex">
@@ -285,7 +285,7 @@
 						<span>or Sign Up</span>
 					</div>
 				</div>
-				<form action="" class="modal__form">
+				<form action="/example.php" class="modal__form">
 					<div class="modal__rows">
 						<div class="modal__row flex">
 							<div class="modal__input flex">
@@ -361,7 +361,7 @@
 					</div>
 					<p class="modal__placeholder">* обязательные поля</p>
 					<div class="modal__check modal__check_2">
-						<input id="remember2" type="checkbox" type="text" checked>
+						<input id="remember2" type="checkbox" checked>
 						<label for="remember2">Галочка согласия с правами галочка согласия с правами галочка согласия с правами <a href="">лецензионное соглашение</a></label>
 					</div>
 					<div class="modal__kapcha flex">
@@ -502,6 +502,7 @@
 	-->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script>
 	<script type="text/javascript" src="js/components/slick.js" ></script>
+	<script type="text/javascript" src="js/components/wow.min.js" ></script>
 	<script type="text/javascript" src="js/custom.js" ></script>
 </body>
 </html>
